[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/Pixel-Font.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/Main-Menu-Font.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Pause-Menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=10]
size = 90
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[node name="Pause-Menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.129412, 0.105882, 0.105882, 0.584314 )

[node name="Label" type="Label" parent="ColorRect"]
pause_mode = 2
anchor_left = 0.428
anchor_top = 0.003
anchor_right = 0.572
anchor_bottom = 0.177
margin_left = -0.272034
margin_top = 0.2
margin_right = 0.271973
margin_bottom = -0.199997
custom_fonts/font = SubResource( 10 )
text = "Pause"

[node name="Resume" type="Button" parent="ColorRect"]
pause_mode = 2
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.419
anchor_top = 0.344
anchor_right = 0.581
anchor_bottom = 0.422
margin_left = -0.320068
margin_top = 0.319992
margin_right = 0.319946
margin_bottom = -0.840027
custom_colors/font_color_disabled = Color( 0.886275, 0.886275, 0.886275, 1 )
custom_fonts/font = SubResource( 2 )
text = "Resume"

[node name="Restart" type="Button" parent="ColorRect"]
pause_mode = 2
modulate = Color( 0.101961, 1, 0, 1 )
self_modulate = Color( 0.478431, 1, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -24.0
margin_right = 104.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 11 )
text = "Restart"

[node name="Exit" type="Button" parent="ColorRect"]
pause_mode = 2
modulate = Color( 0, 0.952941, 1, 1 )
self_modulate = Color( 0, 1, 0.811765, 1 )
anchor_left = 0.419
anchor_top = 0.589
anchor_right = 0.583
anchor_bottom = 0.672
margin_left = -0.320068
margin_top = -0.0800476
margin_bottom = -0.23999
custom_fonts/font = SubResource( 3 )
text = "Exit"

[connection signal="pressed" from="ColorRect/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="ColorRect/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="ColorRect/Exit" to="." method="_on_Exit_pressed"]
